--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,7 +59,13 @@ body {
 	position: relative;
 	overflow: hidden;
 }
-
+.center {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 // main {
 // 	margin-top: 50px;
 // 	position: relative;
