--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,18 +1,19 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
+
 .navbar {
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
+	align-items: center;
 
 	&__logo a {
 		display: flex;
 		align-items: center;
 		gap: 10px;
 	}
+
 	&__menu {
 		ul {
 			display: flex;
-			align-items: center;
 			justify-content: space-between;
 			font-size: 20px;
 			line-height: 32px;
