--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
-@import './variables';
-@import './button';
+@import "./variables.scss";
+@import "./button.scss";
 
 * {
 	font-family: 'Roboto Condensed', sans-serif;
@@ -59,6 +59,7 @@ body {
 	position: relative;
 	overflow: hidden;
 }
+
 .center {
 	width: 100%;
 	height: 100%;
@@ -66,23 +67,3 @@ body {
 	justify-content: center;
 	align-items: center;
 }
-// main {
-// 	margin-top: 50px;
-// 	position: relative;
-// }
-
-// .pulse {
-// 	animation: pulse 1.5s ease-in-out 0.5s infinite;
-// }
-
-// @keyframes pulse {
-// 	0% {
-// 		opacity: 1;
-// 	}
-// 	50% {
-// 		opacity: 0.4;
-// 	}
-// 	100% {
-// 		opacity: 1;
-// 	}
-// }
