--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import './variables.scss';
 
 .btn {
 	height: 46px;
@@ -6,7 +6,7 @@
 	border: none;
 	outline: none;
 	cursor: pointer;
-	transition: all .3s ease;
+	transition: all 0.3s ease;
 	font-size: 17px;
 	padding: 12px 24px;
 
@@ -24,11 +24,18 @@
 	&-secondary {
 		background-color: #fff;
 		border: 1px solid #fff;
-		
+
 		&:hover {
 			color: #fff;
 			background-color: transparent;
 			border-color: rgba(255, 255, 255, 0.1);
+		}
+	}
+	&:disabled {
+		cursor: not-allowed;
+		opacity: 0.5;
+		&:hover {
+			background-color: transparent;
 		}
 	}
 }
